💄 Fix navbar menus being broken in WebKit

--- a/ui/foundation/components/header/menu.scss
+++ b/ui/foundation/components/header/menu.scss
@@ -15,3 +15,7 @@
 	gap: 0.5rem;
 	flex: 1;
 }
+
+.fdn-header-menu > .fdn-menu-container {
+	width: 0;
+}
